<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.magic.rohit.smsing.MainActivity">




    <EditText
        android:id="@+id/to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messages"
        android:hint="@string/to"
        android:text="@string/mynumber"
        android:focusableInTouchMode="true"
        android:focusable="true"
        />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:layout_alignParentStart="true"
        android:layout_below="@+id/to"
        android:background="#8AD3F7"
        android:hint="@string/enter_your_message"
        android:focusableInTouchMode="true"
        android:alpha="80"/>

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input"
        android:onClick="onSendClick"
        android:text="@string/send" />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send"
        android:onClick="onNextClick"
        android:text="@string/go_to_inbox" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/next"
        android:text="@string/to_add_a_custom_filter_such_as_your_personal_account_number_click_here" />


</RelativeLayout>
